# TriangleDesignPatternoop

./: BubbleSort.py  CMakeLists.txt  Distance.py  README.md  Test_Triangles.py  Triangles.py
include/: BubbleSort.h  Distance.h  Triangles.h
src/: BubbleSort.cpp  Distance.cpp  Test_Main.cpp  Test_Triangles.cpp  Triangles.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake
